--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,46 @@
 .carousel-swiper .swiper-pagination-bullet-active {
   @apply bg-[#E6C1C7] opacity-100 w-4 h-1;
 }
+
+@keyframes eq1 {
+  0% {
+    height: 3px;
+  }
+  50% {
+    height: 12px;
+  }
+  100% {
+    height: 3px;
+  }
+}
+@keyframes eq2 {
+  0% {
+    height: 8px;
+  }
+  50% {
+    height: 18px;
+  }
+  100% {
+    height: 8px;
+  }
+}
+@keyframes eq3 {
+  0% {
+    height: 5px;
+  }
+  50% {
+    height: 14px;
+  }
+  100% {
+    height: 5px;
+  }
+}
+.animate-eq1 {
+  animation: eq1 0.8s infinite ease-in-out;
+}
+.animate-eq2 {
+  animation: eq2 0.8s infinite ease-in-out 0.2s;
+}
+.animate-eq3 {
+  animation: eq3 0.8s infinite ease-in-out 0.4s;
+}
